Added requried api_key to request

--- a/home.html
+++ b/home.html
@@ -11,10 +11,10 @@
         <h1>Welcome to the Percolate Coffee Api.</h1>
       </div>
       <div class="well">
-        <p>Why don't you try <a href='/api/coffee/'>/api/coffee/</a> or <a href='/api/coffee/coldbrew/'>/api/coffee/&lt;some_id&gt;</a> to get started.</p>
+        <p>Why don't you try <a href='/api/coffee/?api_key=your_api_key'>/api/coffee/</a> or <a href='/api/coffee/coldbrew/?api_key=your_api_key'>/api/coffee/&lt;some_id&gt;</a> to get started.</p>
         <p><code>GET</code>, <code>POST</code>, and <code>PUT</code> are supported by the API.</p>
         <p>Update or create items using the same fields names that are returned from <code>GET</code> requests (id, name, desc, and image_url).</p>
-        <p>Use <a href="/reset/">/reset/</a> to set everything back to how it started.</p>
+        <p>Use <a href="/reset/?api_key=your_api_key">/reset/</a> to set everything back to how it started.</p>
        </div>
     </div>
   </body>
