--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container" id="content">
 
       <div class="page-header">
-        <img src="https://percolate.com/media/images/logo.png" />
+        <img src="https://percolate.com/static/images/logo.png" />
         <h1>Coffee App Instructions</h1>
       </div>
 
