--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
 
         <h4>Required:</h4>
         <ul>
-          <li>You must use auto layout and do the layout in code. Avoid Xib's, Storyboard.</li>
+          <li>Do all layout using autolayout in code. We don't use storyboards or xibs to prevent merginging issues.</li>
           <li>Network calls must be done using <a href="https://github.com/AFNetworking/AFNetworking">AFNetworking</a></li>
           <li>Target iOS 7.1+</li>
           <li>Install libraries with <a href="http://cocoapods.org/">Cocoapods</a>.</li>
-          <li>Add the ability to share from the detail screen.</li>
 	</ul>
 
         <h4>Nice-to-haves:</h4>
@@ -72,10 +71,11 @@
           <li>Make the app offline usable.</li>
         </ul>
       </div>
-
-      <p class="lead">You can make your own assumptions about any details not mentioned.  Be sure to state your assumptions as part of your submission.</p>
+    
+      <p class="lead">We also accept/encourage submissions in Swift. If you do the app in Swift you are free to choose the libray stack of your preference.</p>
+      <p class="lead">You can make your own assumptions about any details not mentioned. Feel free to email us with any questions and be sure to state your assumptions as part of your submission.</p>
       <p class="lead">We understand that this project will take a full day or two to develop, and that you have a job, hobbies, and a life. Do it in a reasonable amount of time. We want to see how well you can write code, and not how fast.</p>
-      <p class="lead">To submit your application, please provide us access to a git repo on either github or on bitbucket, or you may also zip up your project and email it to us.</p>
+      <p class="lead">To submit your application, please provide us access to a git repo.</p>
       <p class="lead">&nbsp;</p>
     </div>
   </body>
