index.html updates

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
       img {
         width: 300px; height: 45px; margin-bottom: 15px;
       }
+      .orange {
+         color: #F16421
+      }
+      .gray {
+         color: #AAAAAA
+      }
+      .gray-dark {
+         color: #666666
+      }
     </style>
   </head>
   <body>
@@ -30,7 +39,7 @@
       </div>
 
       <p class="lead">Use the API located at <a href="https://coffeeapi.percolate.com/">https://coffeeapi.percolate.com/</a></p>
-      <p class="lead">Implement an application that follows the design storyboard found <a href="https://github.com/percolate/coffeeapi/blob/master/coffee%20app%20storyboard.pdf?raw=true">here</a>.</p>
+      <p class="lead">Implement an application that follows the design storyboard found <a href="https://github.com/percolate/coffeeapi/blob/master/coffee%20app%20storyboard.pdf?raw=true">here</a>.  Our logo can be found <a href="http://percolate.com/static/images/drip.png" target="_blank">here</a> and our color pallet is <span class="orange">#F16421 Orange</span>, <span class="gray">#AAAAAA Gray</span>, and <span class="gray-dark">#666666 Gray-Dark</span>.</p>
 
       <h3>Android Requirements</h3>
       <div class="well">
@@ -71,10 +80,12 @@
           <li>Make use of <a href="https://github.com/ReactiveCocoa/ReactiveCocoa">Reactive Cocoa</a></li>
           <li>Make the app offline usable.</li>
         </ul>
+
+	<p>We also accept/encourage submissions in Swift. If you do the app in Swift you are free to choose the libray stack of your preference.</p>
       </div>
 
       <p class="lead">You can make your own assumptions about any details not mentioned.  Be sure to state your assumptions as part of your submission.</p>
-      <p class="lead">We understand that this project will take a full day or two to develop, and that you have a job, hobbies, and a life. Do it in a reasonable amount of time. We want to see how well you can write code, and not how fast.</p>
+      <p class="lead">We understand that this project will take a full day or two to develop, and that you have a job, hobbies, and a life. Do it in a reasonable amount of time. We want to see how well you can write code not how fast.</p>
       <p class="lead">To submit your application, please provide us access to a git repo on either github or on bitbucket, or you may also zip up your project and email it to us.</p>
       <p class="lead">&nbsp;</p>
     </div>
