Updated test requirements

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <ul>
           <li>Your application must be built using Android Studio.</li>
           <li>Target Android 4.0 and up (API 14).</li>
-          <li>Network calls must be done using <a href="https://github.com/stephanenicolas/robospice">RoboSpice</a>.</li>
+          <li>Network calls must be done using either <a href="http://square.github.io/retrofit/">Retrofit</a>, <a href="http://developer.android.com/training/volley/index.html">Volley</a>, or <a href="https://github.com/stephanenicolas/robospice">RoboSpice</a>.</li>
           <li>Any other libraries may be used if you wish.</li>
           <li>Include a README file with any build instructions and a summary of any decisions (design or technical) not listed here.</li>
 	</ul>
