--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <h4>Required:</h4>
         <ul>
-          <li>Do all layout using autolayout in code. We don't use storyboards or xibs to prevent merginging issues.</li>
+          <li>Do all layout using autolayout in code.</li>
           <li>Network calls must be done using <a href="https://github.com/AFNetworking/AFNetworking">AFNetworking</a></li>
           <li>Target iOS 7.1+</li>
           <li>Install libraries with <a href="http://cocoapods.org/">Cocoapods</a>.</li>
