Made 2nd API call more obvious

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
         <h1>Welcome to the Percolate Coffee Api.</h1>
       </div>
       <div class="well">
-        <p>Why don't you try <a href='/api/coffee/?api_key=your_api_key'>/api/coffee/</a> or <a href='/api/coffee/coldbrew/?api_key=your_api_key'>/api/coffee/&lt;some_id&gt;</a> to get started.</p>
+        <p>Use <a href='/api/coffee/?api_key=your_api_key'>/api/coffee/</a> to get a full list of coffees, and <a href='/api/coffee/coldbrew/?api_key=your_api_key'>/api/coffee/&lt;some_id&gt;</a> to get details.</p>
         <p><code>GET</code>, <code>POST</code>, <code>PUT</code> and <code>DELETE</code> are supported by the API.</p>
         <p>Update or create items using the same fields names that are returned from <code>GET</code> requests (id, name, desc, and image_url).</p>
         <p>Use <a href="/reset/?api_key=your_api_key">/reset/</a> to set everything back to how it started.</p>
