Added intern storyboard

--- a/interns/index.html
+++ b/interns/index.html
@@ -42,8 +42,7 @@
       </div>
 
       <p class="lead">Use the API located at <a href="https://coffeeapi.percolate.com/">https://coffeeapi.percolate.com/</a></p>
-      <p class="lead">Implement an application that follows the design storyboard found <a href="https://github.com/percolate/coffeeapi/blob/master/coffee%20app%20storyboard.pdf?raw=true">here</a>.  Our logo can be found <a href="http://percolate.com/static/images/drip.png" target="_blank">here</a> and our color palette is <span class="orange">#F16421 Orange</span>, <span class="gray">#AAAAAA Gray</span>, and <span class="gray-dark">#666666 Gray-Dark</span>.</p>
-      <p class="lead"><span class="red">Note: The detail page in the storyboard is not required.</span></p>
+      <p class="lead">Implement an application that follows the design storyboard found <a href="https://github.com/percolate/coffeeapi/blob/master/interns/coffee%20app%20intern%20storyboard.pdf?raw=true">here</a>.  Our logo can be found <a href="http://percolate.com/static/images/drip.png" target="_blank">here</a> and our color palette is <span class="orange">#F16421 Orange</span>, <span class="gray">#AAAAAA Gray</span>, and <span class="gray-dark">#666666 Gray-Dark</span>.</p>
 
       <h3>Android Requirements</h3>
       <div class="well">
@@ -51,6 +50,7 @@
         <ul>
           <li>Your application must be built using Android Studio.</li>
           <li>Target Android 4.0 and up (API 14).</li>
+          <li>Splash screen is not required.</li>
         </ul>
       </div>
 
