Updated submittion instructions

--- a/interns/index.html
+++ b/interns/index.html
@@ -59,7 +59,7 @@
         </ul>
       </div>
       <p class="lead">You can make your own assumptions about any details not mentioned. Feel free to email us with any questions and be sure to state your assumptions as part of your submission.</p>
-      <p class="lead">To submit your application, please provide us access to a git repo.</p>
+      <p class="lead">To submit your application, you can either provide us access to a git repo (github or bitbucket) or send us a zip file containing your code.</p>
       <p class="lead">&nbsp;</p>
     </div>
   </body>
