--- a/interns/index.html
+++ b/interns/index.html
@@ -39,7 +39,7 @@
       </div>
 
       <p class="lead">Use the API endpoint <a href="https://coffeeapi.percolate.com/api/coffee/?api_key=api_key">https://coffeeapi.percolate.com/api/coffee/?api_key=api_key</a> to get the data for the coffee list.</p>
-      <p class="lead">Implement an application that follows the design storyboard found <a href="https://github.com/percolate/coffeeapi/blob/master/interns/coffee%20app%20intern%20storyboard.pdf?raw=true">here</a>.  Our logo can be found <a href="http://percolate.com/static/images/drip.png" target="_blank">here</a> and our color palette is <span class="orange">#F16421 Orange</span>, <span class="gray">#AAAAAA Gray</span>, and <span class="gray-dark">#666666 Gray-Dark</span>.</p>
+      <p class="lead">Implement an application that follows the design storyboard found <a href="https://github.com/percolate/coffeeapi/blob/master/interns/coffee%20app%20intern%20storyboard.pdf?raw=true">here</a>.  Our logo can be found <a href="http://percolate.com/static/images/drip.png" target="_blank">here</a> and our color palette is <span class="orange">#F16421 (241, 100, 33) Orange</span>, <span class="gray">#AAAAAA (170, 170, 170) Gray</span>, and <span class="gray-dark">#666666 (102, 102, 102) Gray-Dark</span>.</p>
 
       <h3>Android Requirements</h3>
       <div class="well">
