Libraries with Cocoapods or Carthage. AFNetworking Optional

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         <h4>Required:</h4>
         <ul>
           <li>Do all layout using autolayout in code.</li>
-          <li>Network calls must be done using <a href="https://github.com/AFNetworking/AFNetworking">AFNetworking</a></li>
           <li>Target iOS 7.1+</li>
-          <li>Install libraries with <a href="http://cocoapods.org/">Cocoapods</a>.</li>
+          <li>Install libraries with <a href="http://cocoapods.org/">Cocoapods</a> or <a href="https://github.com/Carthage/Carthage/">Carthage</a>.</li>
 	</ul>
 
         <h4>Nice-to-haves:</h4>
         <ul>
+          <li>Network calls using <a href="https://github.com/AFNetworking/AFNetworking">AFNetworking</a></li>
           <li>Send your <code>api_key</code> as the <code>Authorization</code> HTTP header, not as a <code>GET</code> param.</li>
           <li>Use <a href="https://github.com/Mantle/Mantle">Mantle</a> for object serialization.</li>
           <li>Make use of <a href="https://github.com/ReactiveCocoa/ReactiveCocoa">Reactive Cocoa</a></li>
