--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p class="lead">Use the API located at <a href="https://coffeeapi.percolate.com/">https://coffeeapi.percolate.com/</a></p>
       <p class="lead">
         Implement an application that follows the design storyboard found 
-        <a href="https://github.com/percolate/coffeeapi/blob/master/coffee%20app%20storyboard.pdf?raw=true">here</a>. 
+        <a href="https://github.com/percolate/coffeeapi/blob/master/coffee-app.png?raw=true">here</a>. 
         Our logo can be found 
         <a href="https://github.com/percolate/coffeeapi/blob/master/drip-white.png?raw=true">here</a> 
         and our color palette is <span class="orange">#F16421 Orange</span>, 
