--- a/index.html
+++ b/index.html
@@ -41,12 +41,9 @@
       <p class="lead">Use the API located at <a href="https://coffeeapi.percolate.com/">https://coffeeapi.percolate.com/</a></p>
       <p class="lead">
         Implement an application that follows the design storyboard found 
-        <a href="https://github.com/percolate/coffeeapi/blob/master/coffee-app.png?raw=true">here</a>. 
-        Our logo can be found 
-        <a href="https://github.com/percolate/coffeeapi/blob/master/drip-white.png?raw=true">here</a> 
-        and our color palette is <span class="orange">#F16421 Orange</span>, 
-        <span class="gray">#AAAAAA Gray</span>, and 
-        <span class="gray-dark">#666666 Gray-Dark</span>.
+        <a href="https://github.com/percolate/coffeeapi/blob/gh-pages/coffee-app.png">here</a>. 
+        A white version of our logo can be found 
+        <a href="https://github.com/percolate/coffeeapi/blob/master/drip-white.png?raw=true">here</a>.
       </p>
 	    
       <h3>iOS Requirements</h3>
