--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
           <li>Send your <code>api_key</code> as the <code>Authorization</code> HTTP header, not as a <code>GET</code> param.</li>
         </ul>	
       </div>
+      <p class="lead">Please make sure your submission is compilable out of the box. If you use cocoapods this'll mean including the Pod project in your submission.</p>
       <p class="lead">You can make your own assumptions about any details not mentioned. Feel free to email us with any questions and be sure to state your assumptions as part of your submission.</p>
       <p class="lead">We understand that this project will take a full day or two to develop, and that you have a job, hobbies, and a life. Do it in a reasonable amount of time. We want to see how well you can write code not how fast.</p>
       <p class="lead">&nbsp;</p>
