--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
         <img src="http://percolate.com/static/images/logo.png" />
         <h1>Coffee App Instructions</h1>
       </div>
-            
       <p class="lead">
         Implement an application that follows the design storyboard found 
         <a href="https://github.com/percolate/coffeeapi/raw/gh-pages/coffee-app.png">here</a>. 
       </p>
       <p class="lead">Use the API located at <a href="https://coffeeapi.percolate.com/">https://coffeeapi.percolate.com/</a></p>
-	    
       <h3>iOS Requirements</h3>
       <div class="well">
 
@@ -58,11 +56,9 @@
         <ul>
           <li>Network calls using <a href="https://github.com/alamofire/alamofire">Alamofire</a></li>
           <li>Send your <code>api_key</code> as the <code>Authorization</code> HTTP header, not as a <code>GET</code> param.</li>
-          <li>Use <a href="https://github.com/Hearst-DD/ObjectMapper">ObjectMapper</a> for object serialization.</li>
-          <li>Make use of <a href="https://github.com/ReactiveCocoa/ReactiveSwift">Reactive Swift</a></li>
-          <li>Make the app offline usable.</li>
         </ul>	
       </div>
+      <p class="lead">Please make sure your submission is compilable out of the box. If you use cocoapods this'll mean including the Pod project in your submission.</p>
       <p class="lead">You can make your own assumptions about any details not mentioned. Feel free to email us with any questions and be sure to state your assumptions as part of your submission.</p>
       <p class="lead">We understand that this project will take a full day or two to develop, and that you have a job, hobbies, and a life. Do it in a reasonable amount of time. We want to see how well you can write code not how fast.</p>
       <p class="lead">&nbsp;</p>
